[metadata]
name = oslo.middleware
summary = Oslo Middleware library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/oslo
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    oslo
    oslo.middleware
    oslo_middleware
namespace_packages =
    oslo

[entry_points]
oslo.config.opts =
    oslo.middleware = oslo_middleware.opts:list_opts

oslo.middleware.healthcheck =
    disable_by_file = oslo_middleware.healthcheck.disable_by_file:DisableByFileHealthcheck

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo.middleware/locale
domain = oslo.middleware

[update_catalog]
domain = oslo.middleware
output_dir = oslo.middleware/locale
input_file = oslo.middleware/locale/oslo.middleware.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo.middleware/locale/oslo.middleware.pot

[pbr]
warnerrors = True

[wheel]
universal = 1
